# immich-desktop

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  changelog.json  run.ps1  run.sh
.cursor/rules/: update-changelog.mdc
.github/workflows/: package.yml
flatpak/: com.github.hdmain.immich-desktop.yml  io.github.hdmain.immich-desktop.yml
resources/: LICENSE.rtf  immich-desktop.desktop  immich-desktop.metainfo.xml  immich.desktop  resources.qrc
snap/: snapcraft.yaml
snap/local/: immich-launch
src/: main.cpp
src/config/: AppVersion.h.in
src/core/: AppSettings.cpp  AppSettings.h  AutoStart.cpp  AutoStart.h  ImmichClient.cpp  ImmichClient.h  ImmichTypes.h  OfflineStore.cpp  OfflineStore.h  SingleInstance.cpp  SingleInstance.h  Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h  ThumbnailCache.cpp  ThumbnailCache.h  UpdateManager.cpp  UpdateManager.h  UploadQueueStore.cpp  UploadQueueStore.h  VideoStreamServer.cpp  VideoStreamServer.h
src/ui/: AppIcon.cpp  AppIcon.h  FontLoader.cpp  FontLoader.h  IconUtils.cpp  IconUtils.h  MainWindow.cpp  MainWindow.h
src/ui/pages/: AppearancePage.cpp  AppearancePage.h  ConnectionPage.cpp  ConnectionPage.h  DashboardPage.cpp  DashboardPage.h  ExplorePage.cpp  ExplorePage.h  LibraryPage.cpp  LibraryPage.h  SettingsPage.cpp  SettingsPage.h  UpdatesPage.cpp  UpdatesPage.h
src/ui/widgets/: AnimatedButton.cpp  AnimatedButton.h  AnimatedStackedWidget.cpp  AnimatedStackedWidget.h  ColorButton.cpp  ColorButton.h  MediaTile.cpp  MediaTile.h  Sidebar.cpp  Sidebar.h  TopBar.cpp  TopBar.h  VideoHoverPreview.cpp  VideoHoverPreview.h  VideoPlayerDialog.cpp  VideoPlayerDialog.h  ZoomPanWidget.cpp  ZoomPanWidget.h
tools/: build-and-publish-snap.sh  check-snap-pkgs.sh  export_snap_creds.py  generate_icons.py  upload-snap.sh  wsl-snap-publish.sh
